--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         targetSdkVersion 21
 
         ndk{
-            //选择要添加的对应cpu类型的.so库。
+            //选择要添加的对应cpu类型的.so库。(对应JniLibs中有相应的armeabi， armeabi-v7a 文件夹)
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
@@ -73,5 +73,6 @@ dependencies {
     api 'cn.jiguang.sdk:jcore:1.2.3'
     // 此处以JCore 1.2.3 版本为例。
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation files('libs/TingPhoneOpenSDK_5.2.0.jar')
 }
 
