--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,32 +3,30 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "28.0.1"
-
     lintOptions {
         checkReleaseBuilds false
         // Or, if you prefer, you can continue to check for errors in release builds,
         // but continue the build even when errors are found:
         abortOnError false
     }
-
     defaultConfig {
-        applicationId "com.ijiakj.radio"
         minSdkVersion 11
+        versionCode 12
+        versionName '2.3'
         targetSdkVersion 21
-
+        flavorDimensions "default"
         ndk {
             //选择要添加的对应cpu类型的.so库。(对应JniLibs中有相应的armeabi， armeabi-v7a 文件夹)
             abiFilters 'armeabi', 'armeabi-v7a', 'arm64-v8a'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
 
-        manifestPlaceholders = [
+ /*       manifestPlaceholders = [
                 JPUSH_PKGNAME: "com.ijiakj.radio",
                 JPUSH_APPKEY : "c4d0b1a1b90165bd377361b8", //JPush上注册的包名对应的appkey.
                 JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
-        ]
+        ]*/
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -39,13 +37,35 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
+    }
+    productFlavors {
+        /*因为第一个是上传到了魅族应用商店所以魅族用默认的ID(跟包名是同一个)*/
+        sanKMeiZu {
+          /*  minSdkVersion 19
+            versionCode 12
+            versionName '2.3'*/
+            applicationId 'com.ijiakj.radio'
+            manifestPlaceholders = [
+                    JPUSH_PKGNAME: "com.ijiakj.radio",
+                    JPUSH_APPKEY : "c4d0b1a1b90165bd377361b8", //JPush上注册的包名对应的appkey.
+                    JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+            ]
+        }
+
+        sanK360 {
+            applicationId 'com.ijiakj.radio.sanliuling'
+            manifestPlaceholders = [
+                    JPUSH_PKGNAME: "com.ijiakj.radio.sanliuling",
+                    JPUSH_APPKEY : "c4d0b1a1b90165bd377361b8", //JPush上注册的包名对应的appkey.
+                    JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+            ]
+        }
     }
 }
 
