--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
     <application
         android:name=".framework.RadioApplication"
         android:allowBackup="true"
-        android:icon="@drawable/fm"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/mystyle">
