--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
     }
     defaultConfig {
         minSdkVersion 11
-        versionCode 12
-        versionName '2.3'
+        versionCode 13
+        versionName '2.4'
         targetSdkVersion 21
         flavorDimensions "default"
         ndk {
@@ -58,7 +58,7 @@ android {
           /*  minSdkVersion 19
             versionCode 12
             versionName '2.3'*/
-            applicationId 'com.ijiakj.radio.meizu'
+            applicationId 'com.ijiakj.radio'
             manifestPlaceholders = [
                     JPUSH_PKGNAME: "com.ijiakj.radio",
                     JPUSH_APPKEY : "c4d0b1a1b90165bd377361b8", //JPush上注册的包名对应的appkey.
